[package]
name = "qualifyrss"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "^1", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
base64 = "^0"
reqwest = "^0"
http-body-util = "^0"
hyper-util = { version = "^0", features = ["full"] }
clap = { version = "^4", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "1.0.61"
url = "2.5.0"
rss = "^2"
article_scraper = "^2.1"

