[package]
name = "qualifyrss"
version = "0.5.1"
edition = "2021"

[dependencies]
hyper = { version = "1.3.1", features = ["server"] }
tokio = { version = "1.38.0", features = ["macros","signal","net","rt-multi-thread"] }
base64 = "0.22.1"
reqwest = "0.12.4"
http-body-util = "0.1.1"
hyper-util = { version = "0.1.5" }
clap = { version = "4.5.6", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
url = "2.5.0"
rss = "2.0.8"
feed-rs = "2.0.0"
article_scraper = "2.1.0"

